--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -1,19 +1,15 @@
 
-Motion Project
-==============
+## Machine Learning - Human Motion Project
 
-#### Author - Arnie Larson
+#####Author - Arnie Larson
 
-Project is part of a [Coursera](www.coursera.org) [Machine Learning](https://class.coursera.org/predmachlearn-034) class
+#####Date: 11/19/2016, updated (12/8/2016)
 
-HTML version available [here](https://arnielarson.github.io/analysis.html)
-
-Coure Taught By: Jeff Leek, Johns Hopkins University
-
-Date: `r Sys.Date()`
+#####Project Repository](https://github.com/arnielarson/motion-project)
+--------------
 
 #### Introduction
-The goal of this project was to create a predictive model for classification of human motion data.  The data set comes from a Human Activity Recognition [dataset](http://groupware.les.inf.puc-rio.br/har).  The data used is from sensor captures of subjects doing a simple dumbell curl weightlifting exercise.  Each capture is classified into 5 different ways one can *incorrectly* perform the exericse.  For each capture sensors are used to record measurements of the dumbell/arm/waist etc.  The authors used the time series nature of the data in their analysis to classify the motions.  Our evaluation data is for *instants* in time.  Since we do not have the entire timeseries in our evaluation data, the aim is to create a predictive model to classify the data from a single *instant*.
+This project is part of a [Coursera](www.coursera.org) [Machine Learning](https://class.coursera.org/predmachlearn-034) class, taught by Jeff Leek of Johns Hopkins University.  The goal was to create a predictive model for classification of human motion data.  The data comes from a Human Activity Recognition [dataset](http://groupware.les.inf.puc-rio.br/har).  The data used is from sensor captures of subjects doing a simple dumbell curl weightlifting exercise.  Each capture is classified into 5 different ways one can *incorrectly* perform the exericse.  For each capture the sensors record various measurements of the motion at different points, the dumbell/arm/waist etc.  The authors used the time series nature of the data in their analysis to classify the motions.  Our evaluation data is for *instants* in time.  Since we do not have the entire timeseries in our evaluation data, the aim is to create a predictive model to classify the data from a single temporal *instant*.
 
 
 #### Project Overview
